# harbor

./: README.md  package.json  vite.config.ts
harbor-core/: Cargo.toml
harbor-core/src/: scoring.rs  trust.rs  types.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/relay/: worker.js
src-tauri/src/: discord_rp.rs  lib.rs  mpv.rs  pip.rs  settings_store.rs  stream_proxy.rs  svp.rs  thumbs.rs
src/chrome/: recording-pill.tsx  topbar.tsx
src/chrome/sidebar/: profile-chip.tsx
src/chrome/siderail/: profile-block.tsx
src/components/: addon-star-badge.tsx  age-gate-modal.tsx  anime-genre-picker.tsx  anime-hero.tsx  arrowed-scroll-row.tsx  auth-modal.tsx  award-tiles.tsx  back-to-top.tsx  cinema-hero.tsx  collection-card.tsx  collections-row.tsx  context-menu.tsx  continue-card.tsx  critics-pick.tsx  discovery-queue-cta.tsx  downloads-popover.tsx  error-view.tsx  feed-hero.tsx  format-badge.tsx  genre-tiles.tsx  hero.tsx  host-match-chip.tsx  host-source-banner.tsx  language-tiles.tsx  nudge.tsx  peek-hero.tsx  pick-card.tsx  poster.tsx  rank-badge.tsx  row.tsx  streaming-rail.tsx  together-deploy-modal.tsx  together-invite-toast.tsx  together-modal.tsx  together-participant-left-toast.tsx  together-relay-banner.tsx  together-summon-toast.tsx  top-rank-card.tsx
src/components/anilist/: anilist-connect-modal.tsx
src/components/critics-pick/: lightbox.tsx  overview-modal.tsx
src/components/featured-banner/: big-card-stack.tsx  lightbox.tsx  stepper.tsx  thumbs-dock.tsx
src/components/player/: audio-menu.tsx  cast-menu.tsx  cast-modal.tsx  p2p-status-chip.tsx  resume-prompt.tsx  skip-pill.tsx  sub-style-bar.tsx  sub-sync-bar.tsx  svp-indicator.tsx  transport-stremio.tsx  transport.tsx
src/components/profile-picker/: editor-view.tsx  picker-modal.tsx
src/components/search/: addon-hits.tsx  ai-search-section.tsx  anime-row.tsx  empty-state.tsx  people-row.tsx  search-hotkey.tsx  search-overlay.tsx  url-card.tsx
src/components/simkl/: simkl-device-modal.tsx
src/components/together-modal/: return-to-video.tsx
src/components/trakt/: trakt-device-modal.tsx
src/lib/: addons.ts  ai-search.ts  anime-detect.ts  anime-fillers.ts  context-menu.tsx  detail-customization.ts  hotkeys.ts  meta-resource.ts  playback-history.ts  player-chrome.ts  settings.tsx  stremio.ts  svp.ts  title-backdrop.ts  view.tsx
src/lib/anilist/: to-meta.ts
src/lib/discord/: presence.ts
src/lib/download/: downloads-store.ts
src/lib/player/: bridge.ts  mpv-forward.ts  mpv-tuning.ts  mpv.ts
src/lib/player-shells/: types.ts
src/lib/providers/: rpdb.ts  tmdb.ts
src/lib/settings/: defaults.ts  file-store.ts  load.ts  types.ts
src/lib/simkl/: ids.ts
src/views/: addons.tsx  anime-award.tsx  anime.tsx  arabic.tsx  award.tsx  calendar.tsx  collection.tsx  collections.tsx  detail.tsx  discover.tsx  downloads.tsx  grid.tsx  home.tsx  library.tsx  lists.tsx  live.tsx  movies.tsx  play-picker.tsx  player.tsx  playlist-vod.tsx  service.tsx  settings.tsx  shows.tsx
(+199 files in other folders)
