[package]
name = "harbor-core"
version = "0.1.0"
edition = "2021"
description = "Shared protocol layer for Harbor: stream parsing, trust filtering, scoring."

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
regex = "1"
once_cell = "1"
unicode-normalization = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
