[package]
name = "harbor"
version = "0.9.9"
description = "A Stremio client built for adventure"
edition = "2021"

[lib]
name = "harbor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "stream", "multipart", "json", "gzip"] }
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
libmpv2 = "4"
libmpv2-sys = "4"
libc = "0.2"
base64 = "0.22"
png = "0.17"
discord-rich-presence = "1.1"
rust_cast = { path = "vendor/rust_cast", version = "0.20" }
mdns-sd = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
harbor-core = { path = "../harbor-core" }
librqbit = { version = "=8.1.1", default-features = false, features = ["rust-tls"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_Diagnostics_ToolHelp", "Win32_System_SystemInformation"] }
window-vibrancy = "0.6"
webview2-com = "0.37"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }

[profile.dev]
debug = "line-tables-only"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSThread", "NSValue", "NSDictionary", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSOpenGL", "NSOpenGLView", "NSResponder"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView"] }
core-foundation = "0.10"
core-video = "0.4"
